--- a/README.me
+++ b/README.me
@@ -9,6 +9,8 @@ Hi there! I'm glad you stopped by. I'm a passionate developer who loves building
 - 💬 Ask me about Python, JavaScript, and Machine Learning.
 - 📫 How to reach me: [![LinkedIn](https://img.shields.io/badge/LinkedIn-blue?logo=linkedin)](https://linkedin.com/in/yourprofile) | [![Twitter](https://img.shields.io/badge/Twitter-blue?logo=twitter)](https://twitter.com/yourhandle)
 
+![Visitor Count](https://profile-counter.glitch.me/your-github-username/count.svg)
+
 ## Skills
 - Python, JavaScript, React, Node.js
 - Machine Learning & Data Science
