--- a/README.me
+++ b/README.me
@@ -1,24 +1,27 @@
-# Welcome to My GitHub Profile! 👋
+# Hello! I am a Programmer from Nepal 👋
 
-Hi there! I'm glad you stopped by. I'm a passionate developer who loves building creative software solutions and exploring new technologies.
+## About Me  
+I am a third-year Computer Science student who likes system programming and low-level coding. I find Linux very interesting and enjoy writing small programs close to the machine. I am inspired by Terry A. Davis and Local Thunk (Balatro) because they show how powerful simple and low-level code can be.
 
-## About Me
-- 🔭 I’m currently working on several exciting projects in AI and Web Development.
-- 🌱 Always learning new things and improving my skills.
-- 👯 I’m open to collaboration on open source projects.
-- 💬 Ask me about Python, JavaScript, and Machine Learning.
-- 📫 How to reach me: [![LinkedIn](https://img.shields.io/badge/LinkedIn-blue?logo=linkedin)](https://linkedin.com/in/yourprofile) | [![Twitter](https://img.shields.io/badge/Twitter-blue?logo=twitter)](https://twitter.com/yourhandle)
+I sometimes wish AI did not exist because then coding would feel more personal and rewarding.
 
-![Visitor Count](https://profile-counter.glitch.me/your-github-username/count.svg)
+## What I Like  
+- Writing small and fun system programs  
+- Learning how Linux works  
+- Making simple and efficient code  
 
-## Skills
-- Python, JavaScript, React, Node.js
-- Machine Learning & Data Science
-- Cloud & DevOps: AWS, Docker, CI/CD
+## My Tech Stack  
+![C++](https://img.shields.io/badge/-C++-00599C?style=flat-square&logo=c%2B%2B&logoColor=white)  
+![Python](https://img.shields.io/badge/-Python-3776AB?style=flat-square&logo=python&logoColor=white)  
+![Flask](https://img.shields.io/badge/-Flask-000000?style=flat-square&logo=flask&logoColor=white)  
+![MySQL](https://img.shields.io/badge/-MySQL-4479A1?style=flat-square&logo=mysql&logoColor=white)  
+![Lua](https://img.shields.io/badge/-Lua-2C2D72?style=flat-square&logo=lua&logoColor=white)
 
-## GitHub Stats
-![YourName's GitHub stats](https://github-readme-stats.vercel.app/api?username=yourusername&show_icons=true&theme=radical)
+## What I am Working On  
+I make simple tools and projects using these languages. I’m always learning and trying to get better.
 
----
+## Visitor Count  
+![Visitor Count](https://profile-counter.glitch.me/YOUR-USERNAME/count.svg)
 
-Thanks for visiting my profile! Feel free to connect and collaborate. 🚀
+## Let’s Connect  
+Feel free to reach out if you want to talk about system programming or just say hi!
