--- a/README.me
+++ b/README.me
@@ -10,18 +10,17 @@ I sometimes wish AI did not exist because then coding would feel more personal a
 - Learning how Linux works  
 - Making simple and efficient code  
 
-## My Tech Stack  
+# Example README
+
+## Tech Stack  
 ![C++](https://img.shields.io/badge/-C++-00599C?style=flat-square&logo=c%2B%2B&logoColor=white)  
-![Python](https://img.shields.io/badge/-Python-3776AB?style=flat-square&logo=python&logoColor=white)  
-![Flask](https://img.shields.io/badge/-Flask-000000?style=flat-square&logo=flask&logoColor=white)  
-![MySQL](https://img.shields.io/badge/-MySQL-4479A1?style=flat-square&logo=mysql&logoColor=white)  
-![Lua](https://img.shields.io/badge/-Lua-2C2D72?style=flat-square&logo=lua&logoColor=white)
+![Python](https://img.shields.io/badge/-Python-3776AB?style=flat-square&logo=python&logoColor=white)
+
+## Visitor Count  
+![Visitor Count](https://profile-counter.glitch.me/ABHINAB-CHHETRI/count.svg)
 
 ## What I am Working On  
 I make simple tools and projects using these languages. I’m always learning and trying to get better.
-
-## Visitor Count  
-![Visitor Count](https://profile-counter.glitch.me/YOUR-USERNAME/count.svg)
 
 ## Let’s Connect  
 Feel free to reach out if you want to talk about system programming or just say hi!
