--- a/README.me
+++ b/README.me
@@ -1,26 +1,42 @@
-# Hello! I am a Programmer from Nepal 👋
+👋 Namaste! I'm Abhinab Chhetri
+I'm a third-year Computer Science student from Nepal, passionate about system programming and low-level coding. I love diving into the intricacies of Linux and crafting efficient, close-to-the-metal programs. Inspired by legends like Terry A. Davis (creator of TempleOS) and LocalThunk (solo dev of Balatro), I believe in the power of simple, purposeful code.
 
-## About Me  
-I am a third-year Computer Science student who likes system programming and low-level coding. I find Linux very interesting and enjoy writing small programs close to the machine. I am inspired by Terry A. Davis and Local Thunk (Balatro) because they show how powerful simple and low-level code can be.
+"Code is art when it runs lean and close to the machine."Sometimes, I wonder if AI makes coding less personal, but I still love the grind.
 
-I sometimes wish AI did not exist because then coding would feel more personal and rewarding.
 
-## What I Like  
-- Writing small and fun system programs  
-- Learning how Linux works  
-- Making simple and efficient code  
+🚀 About Me
 
-# Example README
+🎓 Studying Computer Science (3rd year) in Nepal
+💻 Enthusiast of system programming, Linux internals, and minimalist code
+🛠️ Building small, efficient tools and projects that solve real problems
+🌱 Always learning to optimize code and understand systems better
+🤔 Curious about how far simple, low-level code can go
 
-## Tech Stack  
-![C++](https://img.shields.io/badge/-C++-00599C?style=flat-square&logo=c%2B%2B&logoColor=white)  
-![Python](https://img.shields.io/badge/-Python-3776AB?style=flat-square&logo=python&logoColor=white)
 
-## Visitor Count  
-![Visitor Count](https://profile-counter.glitch.me/ABHINAB-CHHETRI/count.svg)
+🛠️ Tech Stack
 
-## What I am Working On  
-I make simple tools and projects using these languages. I’m always learning and trying to get better.
 
-## Let’s Connect  
-Feel free to reach out if you want to talk about system programming or just say hi!
+🔍 What I'm Working On
+
+🧰 System Tools: Crafting small utilities in C++ and Python to explore Linux systems
+🐧 Linux Experiments: Diving into kernel concepts and low-level programming
+⚡ Optimization Challenges: Writing efficient, minimalist code for fun and learning
+📚 Learning: Studying OS design, memory management, and performance tuning
+
+Check out my repositories to see my latest projects!
+
+📊 GitHub Stats
+
+
+👀 Visitor Count
+
+
+📬 Let's Connect
+I'm always excited to talk about system programming, Linux, or just geek out over code. Feel free to reach out!
+
+📧 Email: your.email@example.com
+🌐 GitHub: ABHINAB-CHHETRI
+💬 Discord: YourDiscord#1234 (replace with your actual handle)
+
+
+“Keep it simple, keep it fast, keep it real.”
