--- a/README.me
+++ b/README.me
@@ -1,42 +1,50 @@
-👋 Namaste! I'm Abhinab Chhetri
-I'm a third-year Computer Science student from Nepal, passionate about system programming and low-level coding. I love diving into the intricacies of Linux and crafting efficient, close-to-the-metal programs. Inspired by legends like Terry A. Davis (creator of TempleOS) and LocalThunk (solo dev of Balatro), I believe in the power of simple, purposeful code.
+# 🍀 Namaste! I'm Abhinab Chhetri. Welcome to my profile.
 
-"Code is art when it runs lean and close to the machine."Sometimes, I wonder if AI makes coding less personal, but I still love the grind.
+I'm a third-year Computer Science student from Nepal,I find **system programming** and **low-level coding** really funnnn. I love diving into the intricacies of **Linux** and crafting efficient, close-to-binary programs. Inspired by legends like **Terry A. Davis** (creator of TempleOS) and **LocalThunk** (solo dev of Balatro). Don't underestimate power of simple, purposeful code.
 
+> "Code is binary art when it's made just for the fun of it."  
+---
 
-🚀 About Me
+## 🚀 About Me
+- 🎓 Studying **Computer Science** (3rd year) in Nepal
+- 💻 **system programming**, Linux internals (low level code)
+- 🛠️ Building small, weird but efficient tools and projects 
+- 🌱 Always learning to optimize code and understand logic better
 
-🎓 Studying Computer Science (3rd year) in Nepal
-💻 Enthusiast of system programming, Linux internals, and minimalist code
-🛠️ Building small, efficient tools and projects that solve real problems
-🌱 Always learning to optimize code and understand systems better
-🤔 Curious about how far simple, low-level code can go
+---
 
+## 🛠️ Tech Stack
+![C++](https://img.shields.io/badge/C++-00599C?style=flat-square&logo=cplusplus&logoColor=white)
+![Python](https://img.shields.io/badge/Python-3776AB?style=flat-square&logo=python&logoColor=white)
+![Lua](https://img.shields.io/badge/Lua-2C2D72?style=flat-square&logo=lua&logoColor=white)
+![Linux](https://img.shields.io/badge/Linux-FCC624?style=flat-square&logo=linux&logoColor=black)
+![Git](https://img.shields.io/badge/Git-F05032?style=flat-square&logo=git&logoColor=white)
 
-🛠️ Tech Stack
-
-
-🔍 What I'm Working On
-
-🧰 System Tools: Crafting small utilities in C++ and Python to explore Linux systems
-🐧 Linux Experiments: Diving into kernel concepts and low-level programming
-⚡ Optimization Challenges: Writing efficient, minimalist code for fun and learning
-📚 Learning: Studying OS design, memory management, and performance tuning
+---
 
 Check out my repositories to see my latest projects!
 
-📊 GitHub Stats
+---
 
+## 📊 GitHub Stats
+![Abhinab's GitHub Stats](https://github-readme-stats.vercel.app/api?username=ABHINAB-CHHETRI&show_icons=true&theme=radical)
+![Top Languages](https://github-readme-stats.vercel.app/api/top-langs/?username=ABHINAB-CHHETRI&layout=compact&theme=radical)
 
-👀 Visitor Count
+---
 
+## 👀 Visitor Count
+![Visitor Count](https://profile-counter.glitch.me/ABHINAB-CHHETRI/count.svg)
 
-📬 Let's Connect
-I'm always excited to talk about system programming, Linux, or just geek out over code. Feel free to reach out!
+---
 
-📧 Email: your.email@example.com
-🌐 GitHub: ABHINAB-CHHETRI
-💬 Discord: YourDiscord#1234 (replace with your actual handle)
+## 📬 Let's Connect
+I'm always excited to talk about **system programming**, **Linux**, or just geek out over code. Feel free to reach out!
 
+- 📧 Email: [your.email@example.com](mailto:your.email@example.com)
+- 🌐 GitHub: [ABHINAB-CHHETRI](https://github.com/ABHINAB-CHHETRI)
+- 💬 Discord: [lol will add later](#)
 
-“Keep it simple, keep it fast, keep it real.”
+---
+
+*“Keep it simple, keep it fast*
+
